--- a/visualize/DMWT-IDMWT-lenna.ipynb
+++ b/visualize/DMWT-IDMWT-lenna.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dmwt (DMWT)                  (1, 1024, 1024, 1)        0         \n",
+      "dmwt (DMWT)                  (None, 1024, 1024, 1)     0         \n",
       "=================================================================\n",
       "Total params: 0\n",
       "Trainable params: 0\n",
@@ -131,13 +131,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(1, 1024, 1024, 1)\n",
       "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dmwt_1 (DMWT)                (1, 1024, 1024, 1)        0         \n",
+      "dmwt_1 (DMWT)                (None, 1024, 1024, 1)     0         \n",
       "_________________________________________________________________\n",
-      "idmwt (IDMWT)                (1, 512, 512, 1)          0         \n",
+      "idmwt (IDMWT)                (None, 512, 512, 1)       0         \n",
       "=================================================================\n",
       "Total params: 0\n",
       "Trainable params: 0\n",
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
