added dd2 and name for DMWT

--- a/cifar10_model_compare/multiwavelet_transform-cnn-model.ipynb
+++ b/cifar10_model_compare/multiwavelet_transform-cnn-model.ipynb
@@ -125,7 +125,49 @@
      "output_type": "stream",
      "text": [
       "Train on 40000 samples, validate on 10000 samples\n",
-      "Epoch 1/40\n"
+      "Epoch 1/40\n",
+      "40000/40000 - 96s - loss: 2.0297 - acc: 0.2810 - val_loss: 1.8751 - val_acc: 0.3486\n",
+      "Epoch 2/40\n",
+      "40000/40000 - 93s - loss: 1.8128 - acc: 0.3706 - val_loss: 1.7687 - val_acc: 0.3867\n",
+      "Epoch 3/40\n",
+      "40000/40000 - 93s - loss: 1.7181 - acc: 0.4051 - val_loss: 1.6923 - val_acc: 0.4185\n",
+      "Epoch 4/40\n",
+      "40000/40000 - 93s - loss: 1.6349 - acc: 0.4356 - val_loss: 1.6185 - val_acc: 0.4421\n",
+      "Epoch 5/40\n",
+      "40000/40000 - 95s - loss: 1.5608 - acc: 0.4591 - val_loss: 1.5449 - val_acc: 0.4617\n",
+      "Epoch 6/40\n",
+      "40000/40000 - 96s - loss: 1.4929 - acc: 0.4816 - val_loss: 1.4812 - val_acc: 0.4851\n",
+      "Epoch 7/40\n",
+      "40000/40000 - 93s - loss: 1.4362 - acc: 0.4959 - val_loss: 1.4581 - val_acc: 0.4903\n",
+      "Epoch 8/40\n",
+      "40000/40000 - 94s - loss: 1.3907 - acc: 0.5120 - val_loss: 1.3932 - val_acc: 0.5143\n",
+      "Epoch 9/40\n",
+      "40000/40000 - 94s - loss: 1.3549 - acc: 0.5261 - val_loss: 1.3835 - val_acc: 0.5118\n",
+      "Epoch 10/40\n",
+      "40000/40000 - 93s - loss: 1.3268 - acc: 0.5318 - val_loss: 1.3461 - val_acc: 0.5316\n",
+      "Epoch 11/40\n",
+      "40000/40000 - 93s - loss: 1.3092 - acc: 0.5409 - val_loss: 1.3470 - val_acc: 0.5274\n",
+      "Epoch 12/40\n",
+      "40000/40000 - 94s - loss: 1.2888 - acc: 0.5494 - val_loss: 1.3246 - val_acc: 0.5366\n",
+      "Epoch 13/40\n",
+      "40000/40000 - 94s - loss: 1.2699 - acc: 0.5580 - val_loss: 1.3062 - val_acc: 0.5433\n",
+      "Epoch 14/40\n",
+      "40000/40000 - 95s - loss: 1.2553 - acc: 0.5586 - val_loss: 1.3084 - val_acc: 0.5411\n",
+      "Epoch 15/40\n",
+      "40000/40000 - 94s - loss: 1.2408 - acc: 0.5658 - val_loss: 1.2891 - val_acc: 0.5513\n",
+      "Epoch 16/40\n",
+      "40000/40000 - 93s - loss: 1.2269 - acc: 0.5723 - val_loss: 1.2806 - val_acc: 0.5532\n",
+      "Epoch 17/40\n",
+      "40000/40000 - 94s - loss: 1.2120 - acc: 0.5752 - val_loss: 1.2900 - val_acc: 0.5467\n",
+      "Epoch 18/40\n",
+      "40000/40000 - 94s - loss: 1.1964 - acc: 0.5826 - val_loss: 1.2610 - val_acc: 0.5605\n",
+      "Epoch 19/40\n",
+      "40000/40000 - 94s - loss: 1.1839 - acc: 0.5872 - val_loss: 1.2395 - val_acc: 0.5703\n",
+      "Epoch 20/40\n",
+      "40000/40000 - 94s - loss: 1.1705 - acc: 0.5919 - val_loss: 1.2345 - val_acc: 0.5683\n",
+      "Epoch 21/40\n",
+      "40000/40000 - 506s - loss: 1.1566 - acc: 0.5983 - val_loss: 1.2246 - val_acc: 0.5765\n",
+      "Epoch 22/40\n"
      ]
     }
    ],
@@ -167,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb228708",
+   "id": "cc7c80bd",
    "metadata": {},
    "outputs": [],
    "source": []
