--- a/src/Untitled.ipynb
+++ b/src/Untitled.ipynb
@@ -57,24 +57,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "Model: \"sequential_11\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dwt_5_haar (DWT)             (None, 14, 14, 4)         0         \n",
+      "dwt_11_haar (DWT)            (None, 28, 28, 1)         0         \n",
       "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 14, 14, 4)         0         \n",
+      "flatten_11 (Flatten)         (None, 784)               0         \n",
       "_________________________________________________________________\n",
-      "flatten_5 (Flatten)          (None, 784)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 10)                7850      \n",
+      "dense_11 (Dense)             (None, 10)                7850      \n",
       "=================================================================\n",
       "Total params: 7,850\n",
       "Trainable params: 7,850\n",
@@ -84,14 +82,14 @@
     }
    ],
    "source": [
-    "# load DWT db2 model\n",
+    "\n",
     "model = keras.Sequential()\n",
-    "model.add(keras.Input(shape=input_shape))\n",
-    "model.add(DWT.DWT(name=\"haar\",concat=0))\n",
-    "model.add(keras.layers.Dropout(0.5))\n",
+    "model.add(keras.Input(shape=(28, 28, 1)))\n",
+    "model.add(DWT.DWT(name=\"haar\",concat=1))\n",
     "model.add(keras.layers.Flatten())\n",
     "model.add(keras.layers.Dense(nb_classes, activation=\"softmax\"))\n",
-    "model.summary()"
+    "model.summary()\n",
+    "\n"
    ]
   },
   {
