--- a/src/example.ipynb
+++ b/src/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -48,11 +48,32 @@
     }
    ],
    "source": [
-    "img = cv2.imread(\"../Development/input/LennaGrey.png\", 0)\n",
+    "img = cv2.imread(\"../Development/input/Lenna_orig.png\", 0)\n",
     "img = cv2.resize(img,(240,240))\n",
     "img_t = np.expand_dims(img, axis=-1)\n",
     "img_ex = np.expand_dims(img_t, axis=0)\n",
     "print(img_ex.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 120, 120, 4)\n",
+      "(1, 240, 240, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dwt = DWT.DWT(wavelet_name=\"haar\",concat=0)(tf.dtypes.cast(img_ex, tf.float32))\n",
+    "print(dwt.shape)\n",
+    "idwt = DWT.IDWT(wavelet_name=\"haar\",splited=1)(tf.dtypes.cast(dwt, tf.float32))\n",
+    "print(idwt.shape)"
    ]
   },
   {
@@ -150,13 +171,6 @@
    "source": [
     "pyramid(DWT.DWT(wavelet_name=\"db6\",concat=0), img_ex, levels=5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
