--- a/getting_started/Mutual_information.ipynb
+++ b/getting_started/Mutual_information.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cv2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12600\\2135738620.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mnpeet\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mentropy_estimators\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import cv2\n",
@@ -55,6 +67,42 @@
     "    mi = entropy_estimators.mi(flat_img, flat_coeffs)\n",
     "    # print(f\"Mutual Information = {mi}, for {wavelet_name} Wavelet\")\n",
     "    pd_dict[wavelet_name] = mi\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# def mutual_info_wavelet2(wavelet_name, img, pd_dict:dict, shape=(240, 240)):\n",
+    "    # resize input image to be square\n",
+    "img = cv2.imread(\"../src/input/Lenna_orig.png\", 0)\n",
+    "res = dict()\n",
+    "shape=(240, 240)\n",
+    "wavelet_name = \"haar\"\n",
+    "\n",
+    "img = cv2.resize(img, shape)\n",
+    "# expand dims for the dwt transfor\n",
+    "img_t = np.expand_dims(img, axis=-1)\n",
+    "img_ex = np.expand_dims(img_t, axis=0)\n",
+    "# concat=1 LL,LH,HL,HH in one image\n",
+    "coeffs = DWT.DWT(wavelet_name, concat=1)(tf.dtypes.cast(img_ex, tf.float32))\n",
+    "\n",
+    "\n",
+    "idwt = DWT.IDWT(wavelet_name, concat=1)(tf.dtypes.cast(coeffs, tf.float32))\n",
+    "# extract resault to numpy\n",
+    "dtw_img = coeffs[0,:, :, 0].numpy()\n",
+    "# resize the output to be like the input (maybe we need to use crop?)\n",
+    "dtw_img_res = cv2.resize(dtw_img, dsize=img.shape, interpolation=cv2.INTER_LINEAR)\n",
+    "\n",
+    "flat_img = img_ex.flatten()\n",
+    "flat_coeffs = dtw_img_res.flatten()\n",
+    "mi = entropy_estimators.mi(flat_img, flat_coeffs)\n",
+    "# print(f\"Mutual Information = {mi}, for {wavelet_name} Wavelet\")\n",
+    "pd_dict[wavelet_name] = mi\n",
     "\n"
    ]
   },
@@ -211,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
