added latex table for filter taps in MI

--- a/getting_started/Mutual_information_ll_only.ipynb
+++ b/getting_started/Mutual_information_ll_only.ipynb
@@ -499,6 +499,60 @@
    "source": [
     "print(df.to_latex(caption=\"Mutual Information for various mother wavelets\", label=\"tab:mother_wavelet_info\", position=\"ht\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{table}[ht]\n",
+      "\\caption{Wavelet filter Taps}\n",
+      "\\label{tab:wavelet_taps}\n",
+      "\\begin{tabular}{lp{5cm}p{5cm}}\n",
+      "\\toprule\n",
+      "wavelet_name & LPF Filter & HPF Filter \\\\\n",
+      "\\midrule\n",
+      "haar & 0.7071067811865476, 0.7071067811865476 & -0.7071067811865476, 0.7071067811865476 \\\\\n",
+      "db2 & -0.12940952255126037, 0.2241438680420134, 0.8365163037378079, 0.48296291314453416 & -0.48296291314453416, 0.8365163037378079, -0.2241438680420134, -0.12940952255126037 \\\\\n",
+      "db3 & 0.03522629188570953, -0.08544127388202666, -0.13501102001025458, 0.45987750211849154, 0.8068915093110925, 0.33267055295008263 & -0.33267055295008263, 0.8068915093110925, -0.45987750211849154, -0.13501102001025458, 0.08544127388202666, 0.03522629188570953 \\\\\n",
+      "sym3 & 0.035226291882100656, -0.08544127388224149, -0.13501102001039084, 0.4598775021193313, 0.8068915093133388, 0.3326705529509569 & -0.3326705529509569, 0.8068915093133388, -0.4598775021193313, -0.13501102001039084, 0.08544127388224149, 0.035226291882100656 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\\end{table}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import pywt\n",
+    "\n",
+    "def get_coeefs(name: str):\n",
+    "    wavelet = pywt.Wavelet(name)\n",
+    "    b2_lpf = wavelet.dec_lo\n",
+    "    db2_hpf = wavelet.dec_hi\n",
+    "    \n",
+    "    # Format coefficients to 5 decimal places\n",
+    "    return name, \", \".join(f\"{x}\" for x in b2_lpf), \", \".join(f\"{x}\" for x in db2_hpf)\n",
+    "\n",
+    "# Collect wavelet filter taps\n",
+    "taps = []\n",
+    "taps.append(get_coeefs(\"haar\"))\n",
+    "taps.append(get_coeefs(\"db2\"))\n",
+    "taps.append(get_coeefs(\"db3\"))\n",
+    "taps.append(get_coeefs(\"sym3\"))\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "df_taps = pd.DataFrame(taps, columns=['wavelet_name', 'LPF Filter', 'HPF Filter'])\n",
+    "\n",
+    "# Convert to LaTeX without the row index and with column width for wrapping\n",
+    "print(df_taps.to_latex(caption=\"Wavelet filter Taps\", label=\"tab:wavelet_taps\", position=\"ht\",\n",
+    "                              column_format='lp{5cm}p{5cm}', index=False))\n"
+   ]
   }
  ],
  "metadata": {
